# PDF_check

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
artifacts/: training_history.pkl  vectorizer.pkl
configs/: default.yaml
docs/: api_reference.md  design.md  index.md  installation.md  usage.md
src/: __init__.py
src/app/: cli.py  web.py
src/app/templates/: index.html  result.html
src/model/: load.py  metrics.py  predict.py  train.py
src/pdf_io/: extractor.py
src/preprocessing/: cleaner.py
tests/: conftest.py  test_cleaner.py  test_extractor.py  test_model.py
