[tool.poetry]
name = "pdf_classifier"
version = "0.1.0"
description = "Classify PDF documents into topical categories"
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.24.3"
pdfminer.six = "^20221105"
PyPDF2 = "^3.0.1"
spacy = "^3.7.4"
ru-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.7.0/ru_core_news_sm-3.7.0.tar.gz"}
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz"}
tensorflow = "^2.16"
scikit-learn = "^1.5"
loguru = "^0.7"
flask = "^3.0"
gunicorn = "^22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
ruff = "^0.3"
black = "^24.4"
isort = "^5.13"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
